# Python-Learn

./: .gitignore  requirements.txt
Project/Itcast_qa_system/: .dockerignore  .gitignore  Dockerfile  app.py  config.ini  docker-compose.yml  entrypoint.sh  locust_test.py  new_main.py  old_main.py  pyproject.toml  query_examples.md  requirements.txt  接口文档.md
Project/Itcast_qa_system/base/: __init__.py  config.py  logger.py
Project/Itcast_qa_system/demo/fastapi_lesson/: _01_demo.py  _03_pydantic_async.py  _03_pydantic_async_test.py  _04_ws_client.py  _04_ws_server.py
Project/Itcast_qa_system/demo/logging_lesson/: _01_log_1.py  _02_log.py  _03_log.py  _04_log.py  _logger.py
Project/Itcast_qa_system/demo/minio_lesson/: demo.py
Project/Itcast_qa_system/demo/redis_lesson/: redis_client.py  redis_demo.py
Project/Itcast_qa_system/docker/base_app/: docker-compose.yml
Project/Itcast_qa_system/docker/milvus_redis/: docker-compose.yml
Project/Itcast_qa_system/docker/mysql/: docker-compose.yml
Project/Itcast_qa_system/mysql_qa/: sql_main.py
Project/Itcast_qa_system/mysql_qa/cache/: redis_client.py
Project/Itcast_qa_system/mysql_qa/db/: mysql_client.py
Project/Itcast_qa_system/mysql_qa/retrieval/: bm25_search.py  bm25_search_demo.py
Project/Itcast_qa_system/mysql_qa/utils/: preprocess.py
Project/Itcast_qa_system/notebooks/: bert_models.ipynb  demo_models.ipynb  milvus_utils.ipynb  ollama_utils.ipynb  test.py  test_demo.py
Project/Itcast_qa_system/rag_qa/: demo_parse_args.py  rag_main.py  train.sh
Project/Itcast_qa_system/rag_qa/classify_data/: handler.py  (+10 more)
(+443 files in other folders)
