[project]
name = "itcast-qa-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "dashscope>=1.25.21",
    "datasets>=5.0.0",
    "fastapi>=0.136.3",
    "flagembedding>=1.4.0",
    "jieba>=0.42.1",
    "langchain>=1.3.4",
    "langchain-anthropic==1.4.4",
    "langchain-community==0.4.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "markdown>=3.10.2",
    "milvus-model>=0.2.12",
    "modelscope==1.37.1",
    "notebook>=7.5.7",
    "ollama==0.6.0",
    "openai>=2.41.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "pymilvus>=3.0.0",
    "pymupdf>=1.27.2.3",
    "pymysql>=1.2.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "ragas==0.3.0",
    "rank-bm25>=0.2.2",
    "rapidocr-onnxruntime>=1.4.4",
    "redis>=8.0.0",
    "sentence-transformers>=5.5.1",
    "simplejson>=4.1.1",
    "sortedcontainers>=2.4.0",
    "torch==2.7.0",
    "transformers==5.10.2",
    "unstructured>=0.22.31",
    "uvicorn>=0.49.0",
]
